--- a/_posts/2021-03-18-neverlie.md
+++ b/_posts/2021-03-18-neverlie.md
@@ -24,4 +24,4 @@ author: 山顶洞人
 ### 什么时候可以说谎？
 事物具有对称性。很多人说谎，是因为对方也说谎，或者大家都说谎。但是，问题是，如何打破这种对称性和恶性循环？总要有第一个人站出来，作为突破循环的能量点。另外，我认为官方人物和权威人物应该具有启动能量和保持模范的使命。所谓，上梁不正下梁歪。
 ### 我什么时候会说谎
-就我个人而言，只有在一种情况下，值得我说谎。那就是：面对总是说谎的违法犯罪者时。很多人认为，审讯活动中审讯人员经常会撒谎“诓住”审讯对象。实际上，好的审讯应该是“帮助”审讯对象脱困。在一次与英国学者交流P.E.A.C.E 审讯法时，我们都认为通过与审讯对象建立信任，是突破审讯的最好方法。最后顺便说一句，我认为，审讯的本质是人性的对抗，审讯的根本任务是抓住审讯对象心里面最想要的东西和最害怕的东西。
+就我个人而言，只有在一种情况下，值得我说谎。这是职业要求，而非个人取向。那就是：面对总是说谎的违法犯罪者时。很多人认为，审讯活动中审讯人员经常会撒谎“诓住”审讯对象。实际上，好的审讯应该是“帮助”审讯对象脱困。在一次与英国学者交流P.E.A.C.E 审讯法时，我们都认为通过与审讯对象建立信任，是突破审讯的最好方法。最后顺便说一句，我认为，审讯的本质是人性的对抗，审讯的根本任务是抓住审讯对象心里面最想要的东西和最害怕的东西。
