--- a/_posts/2024-01-26-AIGov.md
+++ b/_posts/2024-01-26-AIGov.md
@@ -11,7 +11,7 @@ author: 谢君泽
 
 *本文是作者在2024年1月22日第三届人工智能科技-哲学-伦理-法律专题报告会所做专题报告《基于人工智能的法理学思考》发言稿基础之上整理而成。*
 
------------------------------------------------------------
+ 
 
 # 一、我们该如何思考人工智能以及相关法律问题
 
@@ -89,19 +89,19 @@ author: 谢君泽
 
 # 六、结语
 
-任何东西都是利弊同源，而利弊矛盾总是随着事物发展的周期而变化，任何事物无法逃避周期律的制裁。人类过去所信仰的法治模式，同样如此。实际上，法治模式只是人类行为在文书工具时代的治理模式映射。只是，因为从印刷术以来，文书工具时代的周期太长，所以容易使人以为法治应该是一种最优选择。从人类历史来看，早期法治优大于劣，诚然代价甚大。中期法治优劣相平，但性价比极好。当下则是法治晚期，弊端突显。
+任何东西都是利弊同源，而利弊矛盾总是随着事物发展的周期而变化，任何事物无法逃避周期律的制裁。人类过去所信仰的法治模式，同样如此。实际上，法治模式只是人类行为在文书工具时代的治理模式映射。只是，因为从印刷术以来，文书工具时代的周期太长，所以容易使人以为法治应该是一种最终选择，即信仰。从人类历史来看，早期法治优大于劣，诚然代价甚大。中期法治优劣相平，但性价比极好。当下已经到了法治晚期，弊端突显。
 
-在今天，法治过剩已经成为阻碍社会进步的重要原因，显现出明显的负面效应。比如，有人戏言，老百姓干什么都是违法的，不能伐木捕猎、不能养鸡养猪、不能占道经营，等等。干什么都要“规定”都要“办证”，形式主义作风极致。同理，法治环境几乎是企业经营乃至经济发展的重要因素。法治最不应进入的领域就是科学研究，因为任何“创新”都是从打破现有规则开始的。反过来说，中国当下的科研“法治”就决定了中国很难或者不可能产生真正的“创新”或者“科学研究”。当下所谓的科学研究大多数是以“科学研究”之名行“技术应用”之实。要知道，科学研究的“创新”与技术应用的“创新”存在天壤之别。前者是从0到1，后者是从1到100。
+在今天，法治过剩已经成为阻碍社会进步的重要原因，显现出明显的负面效应。比如，有人戏言，老百姓干什么都是违法的，不能伐木捕猎、不能养鸡养猪、不能占道经营，等等。干什么都要“规定”都要“办证”，形式主义作风极致。同理，法治环境几乎是企业经营乃至经济发展的重要因素。法治最不应进入的领域就是科学研究，因为任何“创新”都是从打破现有规则开始的，而这与法治所希望的规则确定性是完全相悖的。反过来说，中国当下的科研“法治”就决定了中国很难或者不可能产生真正的“创新”或者“科学研究”。当下所谓的科学研究大多数是以“科学研究”之名行“技术应用”之实。要知道，科学研究的“创新”与技术应用的“创新”存在天壤之别。前者是从0到1，后者是从1到100。
 
-法治迷信就会导致规则过剩。从社会治理角度而言，社会精英应该学会辩证地看待事物的发展，在周期中观察，在平衡中取舍。进步一点就是成功，而不是急功近利，极左或极右。对待法治，同样如此。当然，这里还存在现代社会对经典法治的误解。经典法治其实是限制公权的工具，而现代法治早就演变成限制私权的工具。
+从社会治理角度而言，社会精英应该学会辩证地看待事物的发展，在周期中观察，在平衡中取舍。进步一点就是成功，而不是急功近利，极左或极右。对待法治，同样如此。迷信法治就会导致规则过剩。当然，这里还存在现代社会对经典法治的误解。经典法治其实是限制公权的工具，而现代法治早就演变成限制私权的工具。
 
 俗语说，“天网恢恢，疏而不漏”。其实，我们只看到“天网恢恢”，殊不知“疏而不漏”才是法治的精髓。法治以秩序为追求，秩序的本质是安全，安全必然以自由为代价。只知道把法网越织越密，老百姓就动弹不得。这其实是人类文明的退步。
 
-我认为，智能社会的最优治理模式，应该不再是“天网恢恢”，而应是“麦田里的守望者”。用法律治理分好“麦田”，用科技治理守护“边界”，让老百姓在“麦田”里自由地创造。基于此，随着智能社会治理的理论研究和实践探索逐步成熟，我们就应该要开始考虑收缩法治，让法律瘦身，促规则简约化，使法律精神化。弱化法律治理所形成的规则障碍，强化科技治理去构建安全壁垒，使两者达成新的治理平衡。或许，只有这样才能重新激活社会当下的生产活力。
+我认为，智能社会的最优治理模式，应该不再是“天网恢恢”，而应是“麦田里的守望者”。用法律治理分好“麦田”，用科技治理守护“边界”，让老百姓在“麦田”里自由地创造。基于此，随着智能社会治理的理论研究和实践探索逐步成熟，我们就应该要开始考虑收缩法治，让法律瘦身，促使规则简约化，促使法律精神化。弱化法律治理所形成的规则障碍，强化科技治理去构建新的安全堡垒，使两者达成新的治理平衡。或许，只有这样才能重新激活社会当下的生产活力。
 
 我相信，人民的创造智慧是无穷的，他们可以克服一切困难，他们畏惧的只是社会治理所带来的生态威胁。
 
------------------------------------------------------------
+ 
 
 *作者简介：谢君泽，浙江温州人，法学博士，独立学者（预），号“山顶洞人”，亦人亦兽亦佛。*
 
