--- a/_posts/2024-01-26-AIGov.md
+++ b/_posts/2024-01-26-AIGov.md
@@ -9,7 +9,7 @@ author: 谢君泽
 
  
 
-*本文是作者在2024年1月22日第三届人工智能科技-哲学-伦理-法律专题报告会所做专题报告《基于人工智能的法理学思考》发言稿基础之上整理而成。*
+*本文是作者在2024年1月22日第三届人工智能科技-哲学-伦理-法律专题报告会所做专题报告《基于人工智能的法理学思考》发言稿基础之上修改成文。*
 
  
 
@@ -35,7 +35,7 @@ author: 谢君泽
 
 要理解这些问题，首先至少要在方法论上理解法律治理的运行机理。从法的基本理论来看，法律治理的运行机理其实就是先归纳后演绎的过程。也就是说，首先通过立法去归纳行为类型，然后在司法中进行个案的行为类型比对并予以实定。显然，这种先归纳后演绎的运行过程在成文法国家更明显，这种归纳过程往往是由立法主体负责。在判例法体系下，实际上也存在先归纳后演绎的过程，只是它的思维主体是司法人员。除了思维主体不同，先归纳后演绎的过程并无实质不同。
 
-随着网络智能时代的到来，法律治理的运行机理出现了什么样的问题？如果我们去研究行为学，就会发现最大的问题在于行为的时空环境发生了剧变。法律治理的先归纳后演绎过程，因为它是倚赖于人的操作而进行的，所以这就意味着法律对行为的治理在网络智能环境下存在着更为严重的时空差。换句话说，网络智能环境所导致的时空差与法律治理的滞后性产生了不可调和的矛盾冲突。同时，在网络智能技术的作用下，人的行为方式具有更强的多样性和复杂性，这也使得立法的归纳过程和司法的演绎过程变得更为困难。行为变化越剧变，行为归纳和比对就越困难。这就是法律治理模式在网络智能环境下所遭遇的时代性困难。
+随着网络智能时代的到来，法律治理的运行机理出现了什么样的问题？如果我们去研究行为学，就会发现最大的问题在于行为的时空环境发生了剧变。法律治理的先归纳后演绎过程，因为它是倚赖于人的操作而进行的，所以这就意味着法律对行为的治理在网络智能环境下存在着更为严重的时空差。换句话说，网络智能环境所导致的时空差与法律治理的滞后性产生了不可调和的矛盾冲突。同时，在网络智能技术的作用下，人的行为方式具有更强的多样性和复杂性，这也使得立法的归纳过程和司法的演绎过程变得更为困难。行为变化越剧烈，行为归纳和比对就越困难。这就是法律治理模式在网络智能环境下所遭遇的时代性困难。
 
  
 
@@ -107,12 +107,12 @@ author: 谢君泽
 
 *具有信息技术与法律专业的双重背景，曾研究计算机网络取证、电子证据司法鉴定、信息化侦查、网络犯罪、网络刑法、网络安全法、电子签名法等信息与法的交叉学科领域。当前主要研究智能社会治理、网络行为学、网络法理学、犯罪侦查智能化、智能监管、大数据建模，等。专注方法论研究。*
 
+*擅长哲学思维，提供学生心理健康咨询和专业发展顾问等相关服务。参加本科招生工作近十年，为全国高中学子开设《面向智能社会的专业选择》等专题讲座。*
+
 *曾就职于某高校，于某反贪局挂职锻炼，办理天津爆炸案、审计署审计报告泄密案、某互联网企业被黑客入侵案、某黄金交易平台被DDOS攻击案等重大要案。代表中国新能源企业，开展跨国（美国）案件的证据调查与诉讼战略。*
 
 *曾起草中央网信办电子数据取证工作指引、中华律师协会电子数据取证指引、最高人民检察院电子数据工作细则、纪委监委电子数据调查规范、反网络恐怖主义国际公约等。负责主持纪委智能监督系统的设计研发、网络漏洞资源的安全管控等科研项目。*
 
 *曾发表《智能社会治理方法论》《智能社会治理的法学观察》《检察监督智能化的理论建构》《论大数据证明》《网络平台犯意的算法证明》《网络犯罪主体的同一认定》等学术论文，以及《网络法学方法论》《大数据时代的司法变革》《大数据侦查向人工智能的进化》等学术评论。*
-
-*擅长哲学思维，提供学生心理健康咨询和专业发展顾问等相关服务。参加本科招生工作近十年，为全国高中学子开设《面向智能社会的专业选择》等专题讲座。*
 
 *博客地址：http://xiejunze.world*
